# mental-health-classifier

./: .gitattributes  .gitignore  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  Dockerfile  EXPERIMENT_TRACKING_GUIDE.md  LICENSE  NEW_SYSTEM_GUIDE.md  QUICKSTART.md  README.md  api_server.py  archive_experiments.py  check_git_status.sh  client_sdk.py  consolidate_models.py  consolidate_repo.py  cpu_training.py  debug_config.py  debug_preprocessing.py  deploy.sh  docker-compose.yml  edge_case_results_simple.json  edge_case_testing_fixed.py  enhanced_confusion_matrix.py  example_usage.py  experiments_log.jsonl  fixed_cpu_training.py  git_consolidation_strategy.md  git_workflow.sh  large_cpu_experiment.py  live_demo.py  main.py  manage_experiments.py  medium_cpu_experiment.py  minimal_cpu_training.py  model_consolidation_report.md  models_registry_consolidated.json  optimized_config.py  (+26 more)
config/: config.yaml  cpu_optimized_config.yaml  experiment_configs.yaml  stable_config.yaml  ultra_conservative_config.yaml
experiments/: ARCHIVE_README.md
models/: best_model.pt  model_info.json  vocab.pkl
notebooks/: mental_health_classifier_demo.ipynb
scripts/: analyze_experiments.py  preserve_current_model.py
src/: __init__.py
src/data/: __init__.py  data_processor.py
src/models/: __init__.py  transformer.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  consolidated_experiment_tracker.py  experiment_tracker.py  helpers.py
tests/: test_basic.py  test_basic_fixed.py
