[tool.poetry]
name = "mental-health-classifier"
version = "0.1.0"
description = "Multi-headed attention transformer for mental health disorder classification"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchtext = "^0.15.0"
transformers = "^4.30.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
tqdm = "^4.65.0"
nltk = "^3.8.0"
spacy = "^3.6.0"
datasets = "^2.13.0"
wandb = "^0.15.0"
pyyaml = "^6.0.0"
tensorboard = "^2.13.0"
levenshtein = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
